fixing flake8 configs

--- a/infra/setup.cfg
+++ b/infra/setup.cfg
@@ -16,7 +16,10 @@ exclude =
     .terraform,
     node_modules,
     dist,
-    build
+    build,
+    test_*.py,
+    *_test.py,
+    conftest.py
 
 # Error codes to ignore
 ignore =
