--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Dependencies
 node_modules/
+package-lock.json
 .pnp
 .pnp.js
 
@@ -89,9 +90,17 @@ htmlcov/
 
 # AWS
 .aws-sam/
+.husky/*
+.github/workflows/*
 
 # Misc
 .cache/
 .temp/
 tmp/
 temp/
+
+# Husky
+.husky/*
+
+# GitHub workflows
+.github/workflows/*
