Change npm ci to npm install (no package-lock.json)

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ${{ env.FRONTEND_DIR }}
-        run: npm ci
+        run: npm install
 
       - name: Type check
         working-directory: ${{ env.FRONTEND_DIR }}
