--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -10,6 +10,10 @@ on:
       - '.github/workflows/infrastructure-deploy.yml'
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   TERRAFORM_VERSION: '1.8.0'
   PYTHON_VERSION: '3.11'
@@ -19,6 +23,9 @@ jobs:
   validate-and-plan:
     name: Terraform Validate & Plan
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     
     steps:
       - name: Checkout code
@@ -179,6 +186,9 @@ jobs:
     name: Terraform Apply
     needs: [validate-and-plan, test-backend, security-scan]
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/qa'
     
     steps:
