--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,16 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "aws-amplify": "^6.0.0",
     "@aws-sdk/client-s3": "^3.686.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.686.0",
+    "aws-amplify": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.1.2",
     "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
@@ -34,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.6.1",
     "@vitest/ui": "^1.0.4",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
