--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
-  "dependencies": {
-    "aws-cli": "^0.0.2"
+  "name": "mapme",
+  "version": "1.0.0",
+  "private": true,
+  "description": "MapMe - Full-stack AWS application with React frontend and serverless backend",
+  "workspaces": [
+    "frontend"
+  ],
+  "scripts": {
+    "install:frontend": "cd frontend && npm install",
+    "dev": "cd frontend && npm run dev",
+    "build": "cd frontend && npm run build",
+    "test:frontend": "cd frontend && npm test",
+    "test:infra": "cd infra && pytest",
+    "test:all": "npm run test:frontend && npm run test:infra",
+    "lint:frontend": "cd frontend && npm run lint",
+    "format:frontend": "cd frontend && npm run format",
+    "checks:all": "./run-checks.sh"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/destapickering-9504/MapMe.git"
   }
 }
