Restructure infrastructure for modular CI/CD deployments
- Rename Terraform files with prefixes (frontend-*, backend-*, lambda-*)
- Create 3 separate deployment workflows:
  * frontend-infra-deploy.yml - CloudFront, Cognito, S3
  * backend-infra-deploy.yml - API Gateway, DynamoDB, IAM, CloudWatch
  * lambda-deploy.yml - Fast Lambda code deployment (~30 seconds)
- Refactor lambda-functions.tf to use placeholder.zip and ignore code changes
- Lambda code now deployed independently via AWS CLI (no Terraform apply needed)
- Update infrastructure-deploy.yml to only handle shared config files
- Add lifecycle blocks to Lambda functions to ignore code updates

Benefits:
✅ Lambda changes deploy in ~30 seconds (vs 10+ minutes)
✅ Frontend/backend changes only redeploy affected resources
✅ Smaller blast radius per deployment
✅ Workflows trigger on specific file patterns

--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -6,9 +6,19 @@ on:
       - main
       - qa
     paths:
-      - 'infra/**'
+      - 'infra/main.tf'
+      - 'infra/backend.tf'
+      - 'infra/variables.tf'
+      - 'infra/locals.tf'
+      - 'infra/outputs.tf'
       - '.github/workflows/infrastructure-deploy.yml'
   workflow_dispatch:
+
+# NOTE: This workflow now only handles shared infrastructure configuration
+# Specific deployments are handled by:
+# - frontend-infra-deploy.yml (CloudFront, Cognito, S3)
+# - backend-infra-deploy.yml (API Gateway, DynamoDB, IAM, CloudWatch)
+# - lambda-deploy.yml (Lambda function code - fast CI/CD)
 
 permissions:
   id-token: write
