Fix: Create placeholder.zip in all workflows before Terraform validation
- Add step to generate placeholder.zip in frontend-infra-deploy.yml
- Add step to generate placeholder.zip in backend-infra-deploy.yml
- Add step to generate placeholder.zip in infrastructure-deploy.yml
- Fixes 'no such file or directory' error during terraform validate
- placeholder.zip is in .gitignore so must be created in CI/CD

--- a/.github/workflows/frontend-infra-deploy.yml
+++ b/.github/workflows/frontend-infra-deploy.yml
@@ -62,6 +62,13 @@ jobs:
           fi
           echo "Deploying frontend infrastructure to environment: $ENVIRONMENT"
 
+      - name: Create placeholder.zip for Lambda validation
+        working-directory: ${{ env.INFRA_DIR }}
+        run: |
+          echo 'def handler(event, context): return {"statusCode": 200}' > placeholder.py
+          zip placeholder.zip placeholder.py
+          rm placeholder.py
+
       - name: Terraform Init
         working-directory: ${{ env.INFRA_DIR }}
         run: terraform init
