--- a/.github/workflows/frontend-infra-deploy.yml
+++ b/.github/workflows/frontend-infra-deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
       - qa
     paths:
-      - 'infra/frontend-*.tf'
+      - 'infra/frontend/*.tf'
       - 'infra/main.tf'
       - 'infra/variables.tf'
       - 'infra/locals.tf'
