Add placeholder.zip creation to deploy job

--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -245,6 +245,13 @@ jobs:
           name: terraform-plan
           path: ${{ env.INFRA_DIR }}
 
+      - name: Create placeholder.zip for Lambda deployment
+        working-directory: ${{ env.INFRA_DIR }}
+        run: |
+          echo 'def handler(event, context): return {"statusCode": 200}' > placeholder.py
+          zip placeholder.zip placeholder.py
+          rm placeholder.py
+
       - name: Terraform Init
         working-directory: ${{ env.INFRA_DIR }}
         run: terraform init
