Fix: Include placeholder.zip in frontend and backend workflow artifacts

--- a/.github/workflows/backend-infra-deploy.yml
+++ b/.github/workflows/backend-infra-deploy.yml
@@ -94,6 +94,7 @@ jobs:
           name: terraform-backend-plan
           path: |
             ${{ env.INFRA_DIR }}/tfplan
+            ${{ env.INFRA_DIR }}/placeholder.zip
           retention-days: 7
 
   deploy:
