--- a/.github/workflows/frontend-infra-deploy.yml
+++ b/.github/workflows/frontend-infra-deploy.yml
@@ -94,6 +94,7 @@ jobs:
           name: terraform-frontend-plan
           path: |
             ${{ env.INFRA_DIR }}/tfplan
+            ${{ env.INFRA_DIR }}/placeholder.zip
           retention-days: 7
 
   deploy:
